Fix styles on Safari (iOS and desktop)

--- a/client/landing/gutenboarding/onboarding-block/acquire-intent/style.scss
+++ b/client/landing/gutenboarding/onboarding-block/acquire-intent/style.scss
@@ -25,7 +25,6 @@
 		margin: 0 -88px; // override block margins
 		padding: 12px 170px 0;
 		font-size: 64px;
-		line-height: 80px;
 	}
 }
 
@@ -130,7 +129,6 @@
 
 	input[type='text'].components-text-control__input {
 		@include onboarding-heading-text-mobile;
-		line-height: 1em;
 		height: auto;
 		background: transparent;
 		border: none;
@@ -152,7 +150,6 @@
 
 		@include break-medium {
 			font-size: 64px;
-			line-height: 80px;
 		}
 	}
 }
